Style the form page with a two column layout.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  line-height: 1.5;
+  line-height: 1.3;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -61,6 +61,8 @@ h6 {
   src: url(resources/Norse-Bold.otf);
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 a {
   color: #fff;
 }
@@ -72,7 +74,6 @@ body {
 .main {
   display: flex;
   height: 100vh;
-  width: 1440px;
   margin: 0 auto;
 }
 
@@ -109,4 +110,83 @@ body {
 
 .content {
   flex: 2;
+  height: 70vh;
+  margin: auto 0;
+  background-color: #F9FAFB;
+}
+
+.header-text {
+  font-size: 1.4em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  padding: 0 40px;
+}
+
+.header-text p:last-child {
+  margin: 20px 0 40px;
+}
+
+label, input {
+  display: block;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background-color: #fff;
+  box-shadow: 1px 3px 12px 2px rgba(0,0,0,0.1);
+  color: #1F2937;
+  padding: 20px 40px;
+  font-family: "Roboto";
+}
+
+.form-row {
+  display: flex;
+  gap: 100px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 13px;
+  font-weight: 500;
+}
+
+.form-row input {
+  border: 1px solid #E5E7EB;
+  font-size: 16px;
+  padding: 3px 5px;
+  border-radius: 2px;
+}
+
+input:focus {
+  border: 1px solid #34609f;
+  box-shadow: 1px 3px 12px 2px rgba(0,0,0,0.1);
+  outline: none;
+}
+
+input:invalid {
+  border: 1px solid #d11919
+}
+
+.btn {
+  background-color: #596D48;
+  padding: 10px 40px;
+  font-family: "Roboto";
+  color: #fff;
+  font-weight: 500;
+  font-size: 18px;
+  border-radius: 5px;
+  border: none;
+  margin: 20px 40px;;
+}
+
+.login {
+  padding: 0 40px;
+  font-size: 17px;
+  font-weight: 500;
+  font-family: "Roboto";
+}
+
+.login a {
+  color: #596D48;
+  text-decoration: none;
 }
